EEC_InitBackup/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Potential Providers</fullName>
        <description>Standard Prospect Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attended</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Registered</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Uninterested</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>City__c.State__c</field>
                <operation>equals</operation>
                <value>MA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Main Contact / Licensee</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electronic_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this provider will be using the portal and receive electronic communication from EEC.</inlineHelpText>
        <label>Electronic Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_In_My_Region__c</fullName>
        <formula>Region__r.Name = TEXT( $User.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In My Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Licensed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPM_Language__c</fullName>
        <label>PPM Language</label>
        <picklist>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPM_Meeting_Attended_Date__c</fullName>
        <label>PPM Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPM_Participation_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPM Participation Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Licensing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Prospect PPM Participation Region</relationshipLabel>
        <relationshipName>PPM_Region_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Particip_In_My_Region__c</fullName>
        <formula>PPM_Participation_Region__r.Name =  TEXT($User.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Particip In My Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Status__c</fullName>
        <label>Provider Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended to PPM Meeting</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian/Alaskan Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black/African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian/Other Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensing Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Licensing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salutation_for_mail_merge__c</fullName>
        <formula>IF(OR(ISNULL(TEXT(Salutation)), ISBLANK(TEXT(Salutation))),&quot; &quot;, TEXT(Salutation))</formula>
        <label>Salutation for mail merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Must be &quot;MA&quot; (system will default to MA)</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>MA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllConverted</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>All Potential Providers Converted</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>PPM_Participation_Region__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Registered,Attended</value>
        </filters>
        <label>Open Potential Providers</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>AllReceivedApplication</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Received Application</value>
        </filters>
        <label>All FCC Prospects Received Application</label>
    </listViews>
    <listViews>
        <fullName>AllRegistered</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Registered</value>
        </filters>
        <label>All Registered Potential Providers</label>
    </listViews>
    <listViews>
        <fullName>AllUninterested</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Uninterested</value>
        </filters>
        <label>All Uninterested Potential Providers</label>
    </listViews>
    <listViews>
        <fullName>MyPartRegionOpen</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>PPM_Meeting_Attended_Date__c</columns>
        <columns>PPM_Participation_Region__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Registered,Attended</value>
        </filters>
        <filters>
            <field>Particip_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PartIn-MyRegion Open Potential Providers</label>
    </listViews>
    <listViews>
        <fullName>MyRegionOpen</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>PPM_Participation_Region__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Registered,Attended</value>
        </filters>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region Open Potential Providers</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Street_Address_1__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s FCC Prospects</label>
    </listViews>
    <recordTypes>
        <fullName>FCC_Prospect</fullName>
        <active>true</active>
        <businessProcess>Potential Providers</businessProcess>
        <description>FCC Potential Provider individuals</description>
        <label>FCC Potential Provider</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Electronic_Comm_Checked_Email_Mandatory</fullName>
        <active>true</active>
        <description>If Electronic Communication is checked, Email is mandatory</description>
        <errorConditionFormula>Electronic_Communication__c = TRUE  &amp;&amp; ISBLANK( Email )</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>If Electronic Communication is checked, Email is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PPM_Language_is_Required</fullName>
        <active>true</active>
        <description>This makes PPM Language a required field if the potential provider has PPM Meeting Attended Date filled</description>
        <errorConditionFormula>AND(OR(TEXT(PPM_Language__c) = &apos;None&apos;,TEXT(PPM_Language__c) = &apos;&apos;), NOT(ISBLANK( PPM_Meeting_Attended_Date__c)))</errorConditionFormula>
        <errorDisplayField>PPM_Language__c</errorDisplayField>
        <errorMessage>PPM Language is required if PPM Meeting Date is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PPM_Meeting_Attended_Date_Required_Statu</fullName>
        <active>true</active>
        <description>PPM Meeting Attended Date required if Lead Status = Attended or Converted</description>
        <errorConditionFormula>ISBLANK( PPM_Meeting_Attended_Date__c ) &amp;&amp; OR( ISPICKVAL( Status , &quot;Attended&quot; ), ISPICKVAL( Status , &quot;Converted&quot; ) )</errorConditionFormula>
        <errorDisplayField>PPM_Meeting_Attended_Date__c</errorDisplayField>
        <errorMessage>PPM Meeting Attended Date required if Lead Status = &quot;Attended&quot; or &quot;Received Application&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prospect_Must_Be_In_MA</fullName>
        <active>true</active>
        <description>All providers in the system must be located in Mass</description>
        <errorConditionFormula>TEXT(State__c) &lt;&gt; &quot;MA&quot;</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>Prospect must be located in Massachusetts, please select &quot;MA&quot;</errorMessage>
    </validationRules>
</CustomObject>